--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ main{
 }
 
 .container{
-    /* border: 3px solid white; */
     width: 90vw;
     height: 100px;
     margin: 0 auto;
@@ -47,14 +46,20 @@ main{
     background-color: #000000BB;
     color: white;
     font-size: calc(3vw + 20px);
-    /* border: 3px solid white; */
     user-select: none;
     cursor: pointer;
-    transition: transform .2s;
+    transition: transform .3s;
 }
 
 .active{
     transform: scale(1.3);
     border-color: #ffcc00;
     box-shadow: 0 0 50px #ffcc00;
+}
+
+.title:hover{
+    transform: scale(1.1);
+    border-color: white;
+    box-shadow: 0 0 50px white;
+    transition: transform .3s;
 }
